Incorporate the fullscreen element's background into the document background color.

Documents have a white background by default, which is reported back to the
browser process and fills in the spaces where the renderer hasn't provided
content (for example, if the window is made larger and the renderer hasn't yet
drawn a frame at the new size). Fullscreen elements default to having a black
backdrop which covers the page, and this isn't currently blended into this fill
color.

As a result, the document background color can sometimes be seen for a frame or
two in fullscreen (for instance, if the fullscreen window changes size), which
looks wrong. Including the fullscreen element's background fixes this.

This is a first step: other elements in the top layer, like dialog, are also
laid on top of the page, and their background colors, which may be non-opaque,
should be included too.

Bug: 785001
Change-Id: I25e553450544bf1abaeb6e2f3b11d280d8088015